Fix position texte collapse

--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -107,11 +107,7 @@
             }
 
             @media screen and (min-width: map-get($breakpoint, laptop)) {
-                padding: 22px 27px 19px 18px;
-            }
-            
-            @media screen and (min-width: map-get($breakpoint, laptop-L)) {
-                padding: 27px 11.5px 5px 11.5px;
+                padding: 22px 27px 27px 20px;
             }
         }
     }
@@ -139,7 +135,7 @@
             font-size: 18px;
             line-height: 25.67px;
             font-weight: 400;
-            padding: 22px 27px 47px 18px;
+            padding: 22px 27px 47px 20px;
         }
     }
 
